[gd_scene load_steps=31 format=3 uid="uid://cnedxfn2pxh2t"]

[ext_resource type="PackedScene" uid="uid://dmuyieqssmyou" path="res://UI/UI fatana/UIfatana.tscn" id="1_2mgec"]
[ext_resource type="PackedScene" uid="uid://oe2iv6tjjlku" path="res://UI/UI fatana/ValidationIngredients.tscn" id="1_8og3p"]
[ext_resource type="Shader" uid="uid://cdlt3ujrpad32" path="res://level/sky_with_stars.tres" id="1_hwp5q"]
[ext_resource type="PackedScene" uid="uid://be7jxcsshsqu2" path="res://UI/UI frigo/UIfridge.tscn" id="1_n4gtl"]
[ext_resource type="PackedScene" uid="uid://d0ixvl0wovrnh" path="res://UI/ActionPrompt.tscn" id="1_wa0c4"]
[ext_resource type="PackedScene" uid="uid://b86hqutbutjr5" path="res://UI/UI delivery/UI_delivery.tscn" id="2_0gmwi"]
[ext_resource type="Script" path="res://assets/fbx/stove_single.gd" id="2_4ei1h"]
[ext_resource type="Texture2D" uid="uid://ca3jtautvrj1u" path="res://level/moon.png" id="2_kb37w"]
[ext_resource type="PackedScene" uid="uid://bij84ol81kcts" path="res://level/interactable/kill_plane/kill_plane_3d.tscn" id="3_1g472"]
[ext_resource type="PackedScene" uid="uid://bl11wi12w5l0v" path="res://assets/floor/floor_kitchen-col.gltf" id="5_aau3o"]
[ext_resource type="PackedScene" uid="uid://cwj0j53dgdffg" path="res://UI/UI fatana/RecupPlat.tscn" id="6_gucfu"]
[ext_resource type="PackedScene" uid="uid://exf5133heyn2" path="res://assets/wall/wall.gltf" id="7_cbidp"]
[ext_resource type="Material" uid="uid://da188d7yrcfr8" path="res://level/platforms.tres" id="7_njuj4"]
[ext_resource type="PackedScene" uid="uid://d3r52jciroppk" path="res://UI/UI order/UI_order.tscn" id="7_yuqud"]
[ext_resource type="PackedScene" uid="uid://c3kl5swnjsl1v" path="res://assets/wall/wall_orderwindow_decorated.gltf" id="8_8nm6d"]
[ext_resource type="PackedScene" uid="uid://cy7q4w43jta3s" path="res://assets/fbx/stove_single.fbx" id="9_63faw"]
[ext_resource type="PackedScene" uid="uid://bf6h4rotp3dil" path="res://assets/wall/wall_window_closed.gltf" id="9_im7ty"]
[ext_resource type="PackedScene" uid="uid://vi5abh4cuwdf" path="res://assets/fbx/fridge_B.fbx" id="10_p4lps"]
[ext_resource type="Script" path="res://assets/wall/wall_orderwindow_decorated.gd" id="11_51u1r"]
[ext_resource type="Script" path="res://assets/fbx/fridge_b.gd" id="13_i6tb1"]

[sub_resource type="Curve" id="Curve_k4wis"]
_data = [Vector2(0.331719, 0.0391753), 0.0, 0.0, 0, 0, Vector2(0.697336, 1), 0.51276, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_moxc7"]
curve = SubResource("Curve_k4wis")

[sub_resource type="Gradient" id="Gradient_4p0vt"]
offsets = PackedFloat32Array(0.784123, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jnnrx"]
frequency = 0.3589
fractal_octaves = 4
cellular_distance_function = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_83fre"]
width = 1024
height = 1024
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_4p0vt")
noise = SubResource("FastNoiseLite_jnnrx")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g8ud2"]
shader = ExtResource("1_hwp5q")
shader_parameter/top_color = Color(0.288469, 0.182916, 1, 1)
shader_parameter/bottom_color = Color(1, 0.46805, 0, 1)
shader_parameter/moon_direction = Vector3(-1.095, 0.68, 1)
shader_parameter/moon_size = 0.045
shader_parameter/gradient_curve = SubResource("CurveTexture_moxc7")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_83fre")
shader_parameter/moon_texture = ExtResource("2_kb37w")

[sub_resource type="Sky" id="Sky_0h0bb"]
sky_material = SubResource("ShaderMaterial_g8ud2")

[sub_resource type="Environment" id="Environment_5pwhg"]
background_mode = 2
sky = SubResource("Sky_0h0bb")
ambient_light_source = 3
ambient_light_color = Color(0.74902, 0.742654, 0.615273, 1)
ambient_light_sky_contribution = 0.0
tonemap_mode = 2
tonemap_exposure = 1.05
tonemap_white = 0.95
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 1.4
glow_intensity = 4.98
glow_strength = 0.26
glow_bloom = 0.08
glow_blend_mode = 0
glow_hdr_threshold = 0.26
glow_hdr_scale = 0.0
glow_hdr_luminance_cap = 18.75
glow_map_strength = 1.0
fog_light_color = Color(0.843137, 0.737255, 0.329412, 1)
fog_density = 0.0
fog_aerial_perspective = 1.0
fog_sky_affect = 0.0
fog_height_density = 0.1
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.843137, 0.737255, 0.329412, 1)
volumetric_fog_emission = Color(0.843137, 0.737255, 0.329412, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_y8el3"]
size = Vector3(3.75104, 3.5166, 1.48926)

[sub_resource type="BoxShape3D" id="BoxShape3D_e41ca"]
size = Vector3(2.13438, 1.42465, 2.88533)

[node name="Level" type="Node3D"]

[node name="ActionPrompt" parent="." instance=ExtResource("1_wa0c4")]
unique_name_in_owner = true

[node name="UiDelivery" parent="." instance=ExtResource("2_0gmwi")]
unique_name_in_owner = true

[node name="ValidationIngredients" parent="." instance=ExtResource("1_8og3p")]
unique_name_in_owner = true

[node name="UIfatana" parent="." instance=ExtResource("1_2mgec")]
unique_name_in_owner = true

[node name="UIfridge" parent="." instance=ExtResource("1_n4gtl")]
unique_name_in_owner = true

[node name="RecupPlat" parent="." instance=ExtResource("6_gucfu")]
unique_name_in_owner = true

[node name="UiOrder" parent="." instance=ExtResource("7_yuqud")]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5pwhg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.327016, 0.941731, -0.0787648, 0.688764, 0.294578, 0.662441, 0.647044, 0.162378, -0.744962, -47.2295, 26.8832, -28.0205)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="KillPlane" parent="." instance=ExtResource("3_1g472")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -55.25, -17.7152, -20)

[node name="CSGCombiner" type="CSGCombiner3D" parent="."]
material_override = ExtResource("7_njuj4")
use_collision = true

[node name="CSGCombiner3D2" type="CSGCombiner3D" parent="."]
material_override = ExtResource("7_njuj4")
use_collision = true

[node name="floor_kitchen-col" parent="." instance=ExtResource("5_aau3o")]
transform = Transform3D(2.33276, 0, 0, 0, 1, 0, 0, 0, 2.45429, 1.1467, 0.840103, -22.2801)

[node name="wall2" parent="." instance=ExtResource("7_cbidp")]
transform = Transform3D(2.43144, 0, 0, 0, 1.05834, 0, 0, 0, 0.464162, 1.35802, 0.994944, -27.2609)

[node name="wall_orderwindow_decorated2" parent="." instance=ExtResource("8_8nm6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47669, 1.30142, -17.6293)
script = ExtResource("11_51u1r")

[node name="Area3D" type="Area3D" parent="wall_orderwindow_decorated2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_orderwindow_decorated2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.449799, 1.2583, -0.244629)
shape = SubResource("BoxShape3D_y8el3")

[node name="wall3" parent="." instance=ExtResource("7_cbidp")]
transform = Transform3D(0.853102, 0, 0, 0, 1, 0, 0, 0, 1, -1.8873, 1.29985, -17.6281)

[node name="wall3" parent="wall3" instance=ExtResource("7_cbidp")]
transform = Transform3D(0.853102, 0, 0, 0, 1, 0, 0, 0, 1, 7.48322, 0.0088532, -0.0138321)

[node name="wall_window_closed2" parent="wall3" instance=ExtResource("9_im7ty")]
transform = Transform3D(0.00636955, -0.000674701, 0.999985, 0.0162877, 0.999903, 0.00059914, -1.17206, 0.0138916, 0.0054427, 8.78841, 0.040257, -2.42127)

[node name="wall_window_closed2" parent="wall3/wall_window_closed2" instance=ExtResource("9_im7ty")]
transform = Transform3D(1.17198, 0.0115735, 0.0149219, -0.0138426, 0.999806, 0.0158071, -0.0172735, -0.0159805, 0.999764, 4.0054, -0.0378647, 0.0207438)

[node name="stove_single" parent="." instance=ExtResource("9_63faw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.49792, 1.27718, -26.2424)
script = ExtResource("2_4ei1h")

[node name="Area3D" type="Area3D" parent="stove_single"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="stove_single/Area3D"]
transform = Transform3D(0.99994, 0, 0.0109777, 0, 1, 0, -0.0109777, 0, 0.99994, 0.0453718, 0.555176, 0.170084)
shape = SubResource("BoxShape3D_e41ca")

[node name="Timer" type="Timer" parent="stove_single"]
unique_name_in_owner = true
one_shot = true

[node name="stove_single2" parent="." instance=ExtResource("9_63faw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.599173, 1.26257, -26.253)

[node name="Area3D" type="Area3D" parent="stove_single2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="stove_single2/Area3D"]
transform = Transform3D(0.999106, 0, -0.042277, 0, 1, 0, 0.042277, 0, 0.999106, 0.0709009, 0.274329, -0.144293)
shape = SubResource("BoxShape3D_e41ca")

[node name="stove_single3" parent="." instance=ExtResource("9_63faw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3002, 1.27228, -26.266)

[node name="Area3D" type="Area3D" parent="stove_single3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="stove_single3/Area3D"]
transform = Transform3D(0.999912, 0, -0.0132469, 0, 1, 0, 0.0132469, 0, 0.999912, 0.206772, 0.596564, 0.0855732)
shape = SubResource("BoxShape3D_e41ca")

[node name="fridge_B" parent="." instance=ExtResource("10_p4lps")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.93933, 1.3401, -26.2395)
script = ExtResource("13_i6tb1")

[node name="Area3D" type="Area3D" parent="fridge_B"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="fridge_B/Area3D"]
transform = Transform3D(0.996477, 0.0802337, -0.0243885, -0.0802097, 0.996776, 0.00196311, 0.0244673, 0, 0.9997, 0.0503836, 0.736869, 0.373404)
shape = SubResource("BoxShape3D_e41ca")

[connection signal="body_entered" from="wall_orderwindow_decorated2/Area3D" to="wall_orderwindow_decorated2" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="wall_orderwindow_decorated2/Area3D" to="wall_orderwindow_decorated2" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="stove_single/Area3D" to="stove_single" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="stove_single/Area3D" to="stove_single" method="_on_area_3d_body_exited"]
[connection signal="timeout" from="stove_single/Timer" to="stove_single" method="_on_timer_timeout"]
[connection signal="body_entered" from="fridge_B/Area3D" to="fridge_B" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="fridge_B/Area3D" to="fridge_B" method="_on_area_3d_body_exited"]
